# DeltaLake

./: Untitled-1.ipynb  pyproject.toml
src/deltalake/: medallion_architecture.py
